Remove Chain-of-Thought logging
